--- a/.travis.yml
+++ b/.travis.yml
@@ -25,10 +25,10 @@ deploy:
   provider: elasticbeanstalk
   edge: true
   region: "eu-west-1"
-  app:  "docker-multi"
-  env:  "DockerMulti-env"
+  app:  "multi-docker"
+  env:  "MultiDocker-env"
   bucket_name: "elasticbeanstalk-eu-west-1-252266531447"
-  bucket_path: "docker-multi"
+  bucket_path: "multi-docker"
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
